--- a/code/app/src/main/res/layout/activity_main.xml
+++ b/code/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controleur.MainActivity">
+    android:orientation="vertical"
+    android:padding="8dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+        <ImageView
+            android:id="@+id/imageView_logo"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="100dp"
+            android:src="@drawable/logo_nutella"
+            android:contentDescription="logo de EnjoyYourMeal"/>
+
+        <ImageView
+            android:id="@+id/imageView_profil"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="40dp"
+            android:src="@drawable/photo_profil"
+            android:contentDescription="image profil"
+            android:clickable="true"
+            android:onClick="clickProfil"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linear_recherche"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="25dp">
+        <EditText
+            android:id="@+id/editText_recherche"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:hint="Recherchez des recettes"
+            android:labelFor="@+id/linear_recherche"/>
+
+        <ImageView
+            android:id="@+id/imageView_loupe"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@drawable/loupe_barre_recherche"
+            android:contentDescription="image loupe"
+            android:clickable="true"
+            android:onClick="clickLoupe"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="400dp"
+        android:layout_height="200dp"
+        android:orientation="horizontal"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/photo_profil">
+        <Button
+            android:id="@+id/button_creer_recette"
+            android:layout_width="120dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginStart="20dp"
+            android:text="Créer une recette" />
+    </LinearLayout>
+
+    <HorizontalScrollView
+        android:id="@+id/horizontal_scroll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:contentDescription="HorizontalScrollView des types de recettes">
+
+        <LinearLayout
+            android:id="@+id/linear"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:orientation="horizontal" >
+        </LinearLayout>
+    </HorizontalScrollView>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_margin="20dp"
+        android:text="Recette du jour"
+        android:textAlignment="center"
+        android:textSize="25sp"
+        android:textColor="@color/black"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/ImageButton_recette_jour"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:contentDescription="Image de la recette du jour"
+            android:src="@drawable/logo_nutella"
+            android:clickable="true"
+            android:onClick="clickProfil"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt"
+            android:textColor="@color/black" />
+    </LinearLayout>
+
+</LinearLayout>
+
