--- a/code/app/src/main/res/layout/activity_inscription.xml
+++ b/code/app/src/main/res/layout/activity_inscription.xml
@@ -34,6 +34,18 @@
         android:autofillHints="incription_username"
         android:inputType="textPersonName" />
 
+
+    <EditText
+        android:id="@+id/incription_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:hint="Entrez votre adresse mail"
+        android:inputType="textEmailAddress"
+        android:autofillHints="emailAddress"/>
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,6 +56,7 @@
         android:hint="Entrez votre mot de passe"
         android:inputType="textPassword"
         android:autofillHints="password" />
+
 
     <EditText
         android:layout_width="match_parent"
