--- a/code/app/src/main/res/layout/activity_profil.xml
+++ b/code/app/src/main/res/layout/activity_profil.xml
@@ -27,10 +27,13 @@
             android:layout_height="50dp"
             android:layout_marginTop="100dp"
             android:src="@drawable/crayon_modifier"/>
-
-
-
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button_deconnexion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="deconnexion"/>
 
 
 </LinearLayout>
