--- a/code/app/src/main/res/layout/activity_inscription.xml
+++ b/code/app/src/main/res/layout/activity_inscription.xml
@@ -18,10 +18,20 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="75dp"
+        android:paddingBottom="50dp"
         android:text="Inscription"
         android:textSize="34sp"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/inscription_error_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:paddingBottom="25dp"
+        android:textAlignment="center"
+        android:textColor="#FF0000" />
 
     <EditText
         android:id="@+id/incription_pseudo"
@@ -86,6 +96,6 @@
             android:linksClickable="true"
             android:id="@+id/lien_activite_connexion"
             android:text="Connectez-vous !"
-            />
+            android:textColor="#0000FF" />
     </LinearLayout>
 </LinearLayout>
