Auto stash before merge of "ImplAPI" and "origin/ImplAPI"

--- a/code/app/src/main/res/layout/activity_creer_recette.xml
+++ b/code/app/src/main/res/layout/activity_creer_recette.xml
@@ -73,6 +73,7 @@
             app:srcCompat="@drawable/boutton_rond_plus" />
 
             <Button
+                android:id="@+id/button_etape_prepa"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
