possiblité de voir les recettes qu'on a créer

--- a/code/app/src/main/res/layout/activity_profil.xml
+++ b/code/app/src/main/res/layout/activity_profil.xml
@@ -35,5 +35,11 @@
         android:layout_height="wrap_content"
         android:text="deconnexion"/>
 
+    <Button
+        android:id="@+id/mes_recette_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Mes recettes" />
+
 
 </LinearLayout>
