--- a/code/app/src/main/res/layout/activity_etape_recette.xml
+++ b/code/app/src/main/res/layout/activity_etape_recette.xml
@@ -10,49 +10,58 @@
         android:id="@+id/imageButton_flecheRetour"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        app:srcCompat="@drawable/fleche_retour"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="27dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="27dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/fleche_retour" />
 
     <EditText
         android:id="@+id/editText_nomRecette"
         android:layout_width="79dp"
         android:layout_height="42dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Recette"
-        tools:layout_editor_absoluteX="89dp"
-        tools:layout_editor_absoluteY="28dp" />
+        app:layout_constraintStart_toEndOf="@+id/imageButton_flecheRetour"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editText_numEtape"
         android:layout_width="76dp"
         android:layout_height="42dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="etape : "
-        tools:layout_editor_absoluteX="188dp"
-        tools:layout_editor_absoluteY="28dp" />
+        app:layout_constraintStart_toEndOf="@+id/editText_nomRecette"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextNumber_numEtape"
         android:layout_width="91dp"
         android:layout_height="42dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
         android:inputType="number"
-        tools:layout_editor_absoluteX="281dp"
-        tools:layout_editor_absoluteY="28dp" />
+        app:layout_constraintStart_toEndOf="@+id/editText_numEtape"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView_etape"
         android:layout_width="332dp"
         android:layout_height="456dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="120dp"
         android:layout_marginEnd="24dp"
-        android:text="TextView"
+        android:text="Mélanger la farine et le sucre dans un saladier."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="98dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_prochaine_etape"
@@ -60,10 +69,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:text="Prochaine Etape"
+        app:layout_constraintBottom_toTopOf="@+id/button_accueil"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/button_etapePrecedente"
-        tools:layout_editor_absoluteY="593dp" />
+        app:layout_constraintStart_toEndOf="@+id/button_etapePrecedente" />
 
     <Button
         android:id="@+id/button_accueil"
@@ -71,10 +80,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
+        android:layout_marginBottom="29dp"
         android:text="Accueil"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="654dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button_etapePrecedente"
@@ -82,8 +92,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="Etape Precedente"
+        app:layout_constraintBottom_toTopOf="@+id/button_accueil"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="593dp"
         tools:visibility="invisible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
