--- a/code/app/src/main/res/layout/activity_modifier_liste_de_course.xml
+++ b/code/app/src/main/res/layout/activity_modifier_liste_de_course.xml
@@ -10,53 +10,61 @@
         android:id="@+id/Button_retour"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        app:srcCompat="@drawable/fleche_retour"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="35dp" />
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="35dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/fleche_retour" />
 
     <EditText
         android:id="@+id/editText_nomIngredient"
         android:layout_width="402dp"
         android:layout_height="55dp"
+        android:layout_marginTop="49dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Entrer le nom de l'ingrédient"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="124dp" />
+        app:layout_constraintTop_toBottomOf="@+id/Button_retour"
+        tools:layout_editor_absoluteX="8dp" />
 
     <EditText
         android:id="@+id/editText_quantite"
         android:layout_width="402dp"
         android:layout_height="55dp"
+        android:layout_marginTop="42dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Entre la quantité de l'ingrédient"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="221dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_nomIngredient"
+        tools:layout_editor_absoluteX="8dp" />
 
     <EditText
         android:id="@+id/editText_unite"
         android:layout_width="402dp"
         android:layout_height="55dp"
+        android:layout_marginTop="27dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Entrer le nom de l'unite de mesure de l'ingrédient"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="303dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_quantite"
+        tools:layout_editor_absoluteX="8dp" />
 
     <Button
         android:id="@+id/button_ajouterListeDeCourse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="253dp"
         android:text="Ajouter l'ingredient à la liste de course"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="422dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="45dp" />
 
     <TextView
         android:id="@+id/textView_modifierListeDeCourse"
         android:layout_width="212dp"
         android:layout_height="31dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="84dp"
         android:text="Modifier la liste de course : "
-        tools:layout_editor_absoluteX="115dp"
-        tools:layout_editor_absoluteY="44dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
