--- a/code/app/src/main/res/layout/activity_recette.xml
+++ b/code/app/src/main/res/layout/activity_recette.xml
@@ -10,57 +10,63 @@
         android:id="@+id/flecheRetour"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/fleche_retour"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp"
         tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/nomRecette"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="17dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Recette"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="17dp"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="105dp" />
 
     <EditText
         android:id="@+id/editText_tempsTotal"
         android:layout_width="127dp"
         android:layout_height="44dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="9dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Temps total :"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="71dp"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintTop_toBottomOf="@+id/nomRecette"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/editText_tempsPrepa"
         android:layout_width="163dp"
         android:layout_height="44dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="6dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Temps préparation :"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="121dp"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintTop_toBottomOf="@+id/editText_tempsTotal"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/editText_tempsCuisson"
         android:layout_width="163dp"
         android:layout_height="44dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="9dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Temps cuisson :"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="174dp"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintTop_toBottomOf="@+id/editText_tempsPrepa"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/editText_tempsRepos"
@@ -90,56 +96,63 @@
         android:layout_width="80dp"
         android:layout_height="44dp"
         android:layout_marginStart="12dp"
+        android:layout_marginTop="6dp"
         android:ems="10"
         android:inputType="time"
         app:layout_constraintStart_toEndOf="@+id/editText_tempsPrepa"
-        tools:layout_editor_absoluteY="121dp"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintTop_toBottomOf="@+id/editTextTime_tempsTotal"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/editTextTime_tempsCuisson"
         android:layout_width="80dp"
         android:layout_height="44dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="13dp"
         android:ems="10"
         android:inputType="time"
         app:layout_constraintStart_toEndOf="@+id/editText_tempsCuisson"
-        tools:layout_editor_absoluteY="178dp"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintTop_toBottomOf="@+id/editTextTime_tempsPrepa"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/editTextTime_tempsRepos"
         android:layout_width="80dp"
         android:layout_height="41dp"
         android:layout_marginStart="12dp"
+        android:layout_marginTop="11dp"
         android:ems="10"
         android:inputType="time"
         app:layout_constraintStart_toEndOf="@+id/editText_tempsRepos"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTime_tempsCuisson"
         tools:layout_editor_absoluteY="233dp"
-        tools:ignore="MissingConstraints"/>
-
-    <EditText
-        android:id="@+id/editText_ingredients"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Ingredients :"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="287dp"
-        tools:ignore="MissingConstraints"/>
+        tools:ignore="MissingConstraints" />
 
     <ListView
         android:id="@+id/listIngredients"
         android:layout_width="390dp"
         android:layout_height="350dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginBottom="52dp"
+        app:layout_constraintBottom_toTopOf="@+id/commencerRecette"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_ingredients"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="NotSibling">
+
+        <EditText
+            android:id="@+id/editText_ingredients"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="144dp"
+            android:layout_marginTop="16dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Ingredients :"
+            tools:ignore="MissingConstraints" />
     </ListView>
 
     <Button
@@ -148,9 +161,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
+        android:layout_marginBottom="1dp"
         android:text="Commencer la recette"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="682dp" />
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
